--- a/smart-learner/package.json
+++ b/smart-learner/package.json
@@ -13,7 +13,7 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "cross-env PORT=8080 react-scripts start",
+    "start": "PORT=8080 react-scripts start",
     "build": "react-scripts build --history-api-fallback",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
