--- a/smart-learner/package.json
+++ b/smart-learner/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "set PORT=8080 && react-scripts start",
-    "build": "react-scripts build --history-api-fallback",
+    "build": "react-scripts build --history-api-fallback --production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
