--- a/smart-learner/package.json
+++ b/smart-learner/package.json
@@ -13,10 +13,9 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
+    "build": "webpack",
+    "postinstall": "npm run build"
     "start": "set PORT=8080 && react-scripts start",
-    "build": "react-scripts build --history-api-fallback --production",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
